# ft_vox

./: .gitattributes  .gitignore  CMakeLists.txt  OS.hpp.in  README.md  compile_commands.json  setup.sh
Shaders/: cubes_fragment_shader.glsl  cubes_vertex_shader.glsl  fragment_shader.glsl  skybox_vertex_shader.glsl  text_fragment_shader.glsl  text_vertex_shader.glsl  vertex_shader.glsl
cmake/: FindOpenGL.cmake
include/: Camera.hpp  Cavern.hpp  Chunk.hpp  ChunkManager.hpp  Inputs.hpp  Mesh.hpp  Noise.hpp  Render.hpp  Resources.hpp  Shader.hpp  Skybox.hpp  Text.hpp  Time.hpp  World.hpp  ft_vox.hpp  libs.hpp
src/: Camera.cpp  Cavern.cpp  Chunk.cpp  ChunkManager.cpp  Inputs.cpp  Mesh.cpp  Noise.cpp  OS.cpp  Render.cpp  Resources.cpp  Shader.cpp  Skybox.cpp  Text.cpp  Time.cpp  World.cpp  ft_vox.cpp
